-New fancy look for pipes -New logic optimizer that should decrease the performance impact on servers -Updated recipes for pipes to make them slightly more iron expensive and require glass -Partial Russian Translation by SosanBitz -New icon